tutorial wording fixes

--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/01.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/01.md
@@ -7,7 +7,7 @@ Web Components are a collection of 4 native web APIs. They are:
 * Shadow DOM
 * HTML Templates
 
-You've already used the ES modules specification, which allows you to create javascript modules with imports and exports that are loaded into the page with `<script type=”module”>`.
+You've likely already used the ES modules specification, which allows you to create javascript modules with imports and exports that are loaded into the page with `<script type=”module”>`.
 
 ## Defining a Custom Element
 
@@ -37,7 +37,7 @@ A custom element is defined by associating a class that extends `HTMLElement` wi
 Since <code>customElements.define</code> has a global scope, you cannot currently call it more than once for the same tag name even if the same class definition is given.
 </aside>
 
-Place a <rating-element> in the document body and see what renders.
+Place a `<rating-element>` in the document body and see what renders.
 
 ### index.html
 
