--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/03.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/03.md
@@ -35,6 +35,7 @@ Inside the `connectedCallback`, attach a Shadow Root to the element and render t
 connectedCallback() {
   const shadowRoot = this.attachShadow({mode: 'open'});
 
+  // Note the new CSS Selectors
   shadowRoot.innerHTML = `
     <style>
       :host {
@@ -58,7 +59,7 @@ connectedCallback() {
 }
 ```
 
-When you the page refreshes, you will notice that the styles in the main document can no longer select the nodes inside the Shadow Root.
+When the page refreshes, you will notice that the styles in the main document can no longer select the nodes inside the Shadow Root.
 
 How did you do this? In the `connectedCallback` you called `this.attachShadow` which attaches a shadow root to an element. The `open` mode means that the shadow content is inspectable and makes the shadow root accessible via `this.shadowRoot` as well. Take a look at the Web Component in the Chrome inspector as well:
 
@@ -87,5 +88,5 @@ An experiment: add a node as a direct child of the `<rating-element>`:
 Once the page refreshes, you'll see that this new DOM node in this Custom Element's Light DOM does not show up on the page. This is because Shadow DOM has features to control how Light DOM nodes are projected into the shadow dom via `<slot>` elements.
 
 <aside class="info">
-We will not cover Light DOM projection in this codelab, but you can learn more about them in this <a href="https://developer.mozilla.org/en-US/docs/Web/Web_Components/Using_templates_and_slots#adding_flexibility_with_slots">MDN article</a> or the <a href="https://lit.dev/docs/components/shadow-dom/#slots">Lit docs site</a>.
+We will not cover Light DOM projection in this tutorial, but you can learn more about them in this <a href="https://developer.mozilla.org/en-US/docs/Web/Web_Components/Using_templates_and_slots#adding_flexibility_with_slots">MDN article</a> or the <a href="https://lit.dev/docs/components/shadow-dom/#slots">Lit docs site</a>.
 </aside>
