--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/04.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/04.md
@@ -1,6 +1,6 @@
 ## Why Templates
 
-Using `innerHTML` and template literal strings with no sanitization may cause security issues with script injection. Before `<template>` was aded to the browser, in the past, it was common to use `DocumentFragments`, but these also come with other issues such as images loading and scripts running when the templates are defined but not rendered, as well as introducing obstacles for reusability.
+Using `innerHTML` and template literal strings with no sanitization may cause security issues with script injection. In the past, to create HTML templates it was common to use `DocumentFragments` or scripts with specialized `type` attibutes, but these solutions had issues such as images loading or scripts running when the templates are defined but not rendered, and obstacles for reusability across development environments.
 
 This is where the `<template>` element comes in; templates provide truly *inert* DOM, a highly performant method to clone nodes, and reusable templating.
 
