--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/06.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/06.md
@@ -37,7 +37,7 @@ attributeChangedCallback(attributeName, _oldValue, newValue) {
 
 {% endswitchable-sample %}
 
-In order for the `attributeChangedCallback` to trigger, you must set a static getter for `RatingElement.observedAttributes` which defines the attributes to be observed for changes. You then set the `rating` attribute declaratively in the DOM. Give it a try:
+In order for the `attributeChangedCallback` to trigger, you must set a static getter for `RatingElement.observedAttributes` which declares which attributes should be observed for changes. You then set the `rating` attribute declaratively in the DOM. Give it a try:
 
 ### index.html
 
