--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/09.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/09.md
@@ -134,9 +134,9 @@ class RatingElement extends HTMLElement {
 
 You may also delete your `<template>` from `index.html`.
 
-In this `render` method you define a variable called `template` and invoke the `html` tagged template literal function. You will also notice that you have performed a simple data binding inside the `span` element by using something called the *template literal interpolation* (`${...}`).
+In this `render` method you define a variable called `template` and invoke the `html` tagged template literal function. You will also notice that you have performed a simple data binding inside the `span` element by using something called *template literal interpolation* (`${...}`).
 
-This means that you will eventually no longer need to imperatively update that node.
+This means that you will eventually no longer need to imperatively update that node and can remove the `.innerText` assignment in your `connectedCallback`.
 
 Additionally, you call the lit render method which synchronously renders the template into the shadow root.
 
