--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/10.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/10.md
@@ -1,6 +1,8 @@
 ## Event Listeners
 
-Now that you have gotten rid of the `<template>` element in `index.html`, refactor the code to instead call the newly-defined `render` method. You can start by leveraging lit's event listener binding syntax:
+Now that you have gotten rid of the `<template>` element in `index.html`, refactor the code to take advantage of `lit-html`s features in the newly-defined `render` method. You can start by leveraging Lit's event listener binding syntax:
+
+### index.js
 
 ```html
 <button
@@ -24,6 +26,8 @@ Next:
 * Clean up the event logic in `connectedCallback`
 * Remove `disconnectedCallback`
 * Remove the `_on[Up|Down]Click` methods
+
+### index.js
 
 {% switchable-sample %}
 
@@ -120,8 +124,8 @@ Note, this is not the most-efficient way of writing this, but its complexity is 
 
 Here, you:
 
-* were able to remove the dom update logic from the `rating` setter
-* added a call to `render` from the `vote` setter
+* Removed the dom update logic from the `rating` setter
+* Added a call to `render` from the `vote` setter
 
 Now the template is much more readable as you now can see where the bindings and event listeners are applied.
 
