--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/11.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/11.md
@@ -12,7 +12,7 @@ This is where `LitElement` comes in!
 
 ## Defining A LitElement
 
-Start by importing and subclassing the `LitElement` base class from the `lit` package and in TS, use the `@customElement` decorator to replace the `customElements.define call`:
+Start by importing and subclassing the `LitElement` base class from the `lit` package and in TS, use the `@customElement` decorator to replace the `customElements.define` call:
 
 ### index.js
 
@@ -22,6 +22,7 @@ Start by importing and subclassing the `LitElement` base class from the `lit` pa
 import {LitElement, html, css} from 'lit';
 import {customElement, property} from 'lit/decorators.js';
 
+// Remember to extend LitElement
 @customElement('rating-element')
 class RatingElement extends LitElement {
   // remove connectedCallback()
@@ -34,6 +35,7 @@ class RatingElement extends LitElement {
 ```js
 import {LitElement, html, css} from 'lit';
 
+// Remember to extend LitElement
 class RatingElement extends LitElement {
   // remove connectedCallback()
   // comment out the observedAttributes method for now this will break
@@ -45,7 +47,7 @@ class RatingElement extends LitElement {
 
 You import `LitElement` which is the new base class for the `<rating-element>`.
 
-Next you keep your `html` import and finally `css` which allows us to define css tagged template literals which enable math, templating, and other features under the hood.
+Next you keep the `html` import and add `css` to your imports which allows us to define css tagged template literals which enable math, templating, and other features under the hood.
 
 <aside class="info">
 For a comprehensive list of styling features, please visit the <a href="https://lit.dev/docs/components/styles/">Lit docs's styling section</a>.
