--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/12.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/12.md
@@ -29,6 +29,7 @@ class RatingElement extends LitElement {
 
   // remove observedAttributes() and attributeChangedCallback()
   // remove set rating() get rating()
+  // remove set vote() get vote()
   // remove the _rating and _vote private class members
   ...
 ```
@@ -49,6 +50,7 @@ class RatingElement extends LitElement {
 
   // remove observedAttributes() and attributeChangedCallback()
   // remove set rating() get rating()
+  // remove set vote() get vote()
   // remove the _rating and _vote private class members
   ...
 ```
@@ -95,9 +97,9 @@ document.querySelector(‘user-profile').user = this.user;
 </details>
 </aside>
 
-Additionally, the `reflect` flag on the `vote` property will automatically update the host element's `vote` *attribute* that you previously updated in the `vote` setter.
+Additionally, the `reflect` flag on the `vote` property will automatically update the host element's `vote` *attribute* that you formerly updated in the `vote` setter.
 
-## WillUpdate Lifecycle Callback
+## willUpdate Lifecycle Callback
 
 Now update the `rating` when the `vote` property changes in the `willUpdate` Lit lifecycle method:
 
