--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/00.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/00.md
@@ -17,7 +17,7 @@ LitElement provides APIs to simplify common Web Components tasks like managing p
 * How to build a LitElement component
 
 <aside class="warning">
-If you're just looking to learn Lit and not the specifics on how Lit works or does under the hood. We recommend taking a look at the Lit docs site at lit.dev
+If you're just looking to learn Lit and not the specifics on how Lit works or does under the hood. We recommend taking a look at the Lit docs site at <a href="https://lit.dev">lit.dev</a> or other <a href="https://lit.dev/tutorials">tutorials</a>.
 </aside>
 
 ## What you’ll build
