[tutorial] make tutorial build

--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/02.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/02.md
@@ -25,7 +25,7 @@ Now, return to the custom element and associate some DOM with it. Set the elemen
 {% switchable-sample %}
 
 ```ts
-class RatingElement extends HTMLElement {
+export class RatingElement extends HTMLElement {
   rating: number;
 
   constructor() {
@@ -61,7 +61,7 @@ class RatingElement extends HTMLElement {
 ```
 
 ```js
-class RatingElement extends HTMLElement {
+export class RatingElement extends HTMLElement {
   constructor() {
     super();
     this.rating = 0;
