--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/07.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/07.md
@@ -28,7 +28,7 @@ Now, implement the logic for this by creating a reflecting property / attribute 
 {% switchable-sample %}
 
 ```ts
-class RatingElement extends HTMLElement {
+export class RatingElement extends HTMLElement {
   private _rating = 0;
   private _vote: 'up'|'down'|null = null;
 
@@ -65,7 +65,7 @@ class RatingElement extends HTMLElement {
 ```
 
 ```js
-class RatingElement extends HTMLElement {
+export class RatingElement extends HTMLElement {
   _vote = null;
 
   ...
