--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/08.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/08.md
@@ -7,7 +7,7 @@ And now finally, add some click event listeners to give the buttons functionalit
 {% switchable-sample %}
 
 ```ts
-class RatingElement extends HTMLElement {
+export class RatingElement extends HTMLElement {
   ...
   private _boundOnUpClick = this._onUpClick.bind(this);
   private _boundOnDownClick = this._onDownClick.bind(this);
@@ -45,7 +45,7 @@ class RatingElement extends HTMLElement {
 ```
 
 ```js
-class RatingElement extends HTMLElement {
+export class RatingElement extends HTMLElement {
   ...
   _boundOnUpClick = this._onUpClick.bind(this);
   _boundOnDownClick = this._onDownClick.bind(this);
