--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/09.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/09.md
@@ -46,7 +46,7 @@ Start by migrating the `<template>` in index.html into a Lit template by adding 
 // Dont forget to import from Lit!
 import {render, html} from 'lit';
 
-class RatingElement extends HTMLElement {
+export class RatingElement extends HTMLElement {
   ...
   render() {
     if (!this.shadowRoot) {
@@ -90,7 +90,7 @@ class RatingElement extends HTMLElement {
 // Dont forget to import from Lit!
 import {render, html} from 'lit';
 
-class RatingElement extends HTMLElement {
+export class RatingElement extends HTMLElement {
   ...
   render() {
     if (!this.shadowRoot) {
