--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/10.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/10.md
@@ -32,7 +32,7 @@ Next:
 {% switchable-sample %}
 
 ```ts
-class RatingElement extends HTMLElement {
+export class RatingElement extends HTMLElement {
   private _rating = 0;
   private _vote: 'up'|'down'|null = null;
 
@@ -47,7 +47,7 @@ class RatingElement extends HTMLElement {
 ```
 
 ```js
-class RatingElement extends HTMLElement {
+export class RatingElement extends HTMLElement {
   _rating = 0;
   _vote = null;
 
