--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/11.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/11.md
@@ -24,7 +24,7 @@ import {customElement, property} from 'lit/decorators.js';
 
 // Remember to extend LitElement
 @customElement('rating-element')
-class RatingElement extends LitElement {
+export class RatingElement extends LitElement {
   // remove connectedCallback()
   // remove customElements.define at the end of the file
   // comment out the observedAttributes method for now this will break
@@ -36,7 +36,7 @@ class RatingElement extends LitElement {
 import {LitElement, html, css} from 'lit';
 
 // Remember to extend LitElement
-class RatingElement extends LitElement {
+export class RatingElement extends LitElement {
   // remove connectedCallback()
   // comment out the observedAttributes method for now this will break
   //   functionality for now, but we'll tackle that in the next step
@@ -62,7 +62,7 @@ Next, move the styles from the render method to Lit's static stylesheet:
 {% switchable-sample %}
 
 ```ts
-class RatingElement extends LitElement {
+export class RatingElement extends LitElement {
   static styles = css`
     :host {
       display: inline-flex;
@@ -88,7 +88,7 @@ class RatingElement extends LitElement {
 ```
 
 ```js
-class RatingElement extends LitElement {
+export class RatingElement extends LitElement {
   static styles = css`
     :host {
       display: inline-flex;
