--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/12.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/12.md
@@ -19,7 +19,7 @@ To use this feature, you must statically declare which properties are *Reactive 
 {% switchable-sample %}
 
 ```ts
-class RatingElement extends LitElement {
+export class RatingElement extends LitElement {
   ...
   @property({type: Number})
   rating = 0;
@@ -35,7 +35,7 @@ class RatingElement extends LitElement {
 ```
 
 ```js
-class RatingElement extends LitElement {
+export class RatingElement extends LitElement {
   ...
   static properties = {
     rating: {type: Number},
