--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/00.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/00.md
@@ -17,7 +17,8 @@ LitElement provides APIs to simplify common Web Components tasks like managing p
 * How to build a LitElement component
 
 <aside class="warning">
-If you're just looking to learn Lit and not the specifics on how Lit works or does under the hood. We recommend taking a look at the Lit docs site at <a href="https://lit.dev">lit.dev</a> or other <a href="https://lit.dev/tutorials">tutorials</a>.
+This tutorial focuses on the web components specifications and how Lit works under the hood to help  you build web components more easily.
+For a more general introduction to Lit, take a look at the <a href="https://lit.dev/docs/">Lit docs</a> or other <a href="https://lit.dev/tutorials/">tutorials</a>.
 </aside>
 
 ## What you’ll build
