--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/00.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/00.md
@@ -6,7 +6,7 @@ Web Components are a set of web platform APIs that allow you to create new custo
 
 [Lit](https://lit.dev) is a library for creating fast, lightweight Web Components that work in any web page with any framework.
 
-LitElement provides APIs to simplify common Web Components tasks like managing properties, attributes, and rendering.
+Lit provides APIs to simplify common web components tasks like managing properties, attributes, and rendering.
 
 ## What you'll Learn
 
