--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/02.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/02.md
@@ -1,6 +1,6 @@
 ## Custom Element Lifecycle
 
-Custom Elements come with a set of lifecycle hooks. They are:
+Custom elements come with a set of lifecycle hooks. In this section you'll use two of them:
 
 * `constructor`
 * `connectedCallback`
