--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/03.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/03.md
@@ -59,7 +59,7 @@ connectedCallback() {
 }
 ```
 
-When the page refreshes, you will notice that the styles in the main document can no longer select the nodes inside the Shadow Root.
+Now the red border box should be gone—the styles in the main document can no longer select the nodes inside the shadow root.
 
 How did you do this? In the `connectedCallback` you called `this.attachShadow` which attaches a shadow root to an element. The `open` mode means that the shadow content is inspectable and makes the shadow root accessible via `this.shadowRoot` as well. Take a look at the Web Component in the Chrome inspector as well:
 
