--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/03.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/03.md
@@ -65,7 +65,7 @@ How did you do this? In the `connectedCallback` you called `this.attachShadow` w
 
 <img src="/images/tutorials/wc-to-lit/dom-tree.png" alt="The dom tree in the chrome inspector. There is a <rating-element> with a#shadow-root (open) as it&rsquo;s child, and the DOM from before inside that shadowroot.">
 
-You should now see an expandable shadow root that holds the contents. Everything inside that shadow root is called the *Shadow DOM*. If you were to select the rating element in Chrome Dev Tools and call `$0.children`, you will notice that it returns no children. This is because Shadow DOM is not considered a part of the same DOM tree as direct children but rather the *Shadow Tree*.
+You should now see a shadow root inside your component. You can expand the shadow root to show the contents of the shadow DOM. If you select the rating element in Chrome Dev Tools and call `$0.children`, you'll notice that it returns no children. The shadow DOM is its own DOM tree, separate from the component's direct children.
 
 <aside class="info">
 The Shadow Tree provides CSS and DOM encapsulation by scoping both CSS selectors and <code>querySelector</code>s to the local shadow root.
