--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/03.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/03.md
@@ -85,7 +85,7 @@ An experiment: add a node as a direct child of the `<rating-element>`:
 </rating-element>
 ```
 
-Once the page refreshes, you'll see that this new DOM node in this Custom Element's Light DOM does not show up on the page. This is because Shadow DOM has features to control how Light DOM nodes are projected into the shadow dom via `<slot>` elements.
+Once the page refreshes, you'll see that the new `<div>` does not show up. This is because shadow DOM has features to control how child nodes—sometimes called *light DOM*—are rendered or *projected* into the shadow DOM.
 
 <aside class="info">
 We will not cover Light DOM projection in this tutorial, but you can learn more about them in this <a href="https://developer.mozilla.org/en-US/docs/Web/Web_Components/Using_templates_and_slots#adding_flexibility_with_slots">MDN article</a> or the <a href="https://lit.dev/docs/components/shadow-dom/#slots">Lit docs site</a>.
