--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/00.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/00.md
@@ -13,8 +13,8 @@ Lit provides APIs to simplify common web components tasks like managing properti
 * What is a Web Component
 * The concepts of Web Components
 * How to build a Web Component
-* What are lit-html and LitElement
-* How to build a LitElement component
+* What is Lit
+* How to build a Lit component
 
 <aside class="warning">
 This tutorial focuses on the web components specifications and how Lit works under the hood to help  you build web components more easily.
