--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/00.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/00.md
@@ -27,5 +27,5 @@ For a more general introduction to Lit, take a look at the <a href="https://lit.
 * A thumbs up / down LitElement-based Web Component
 
 <aside class="positive">
-Already know the basics of Web Components? Skip to <a href="#09">"lit-html"</a>, to see what lit-html and LitElement do on top of Web Components!
+Already know the basics of web components? Skip to <a href="#09">Lit templates</a>, to see how Lit can help!
 </aside>
