--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/09.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/09.md
@@ -18,7 +18,7 @@
 
 ---
 
-## Why lit-html?
+## Why Lit templates?
 
 First and foremost, the `<template>` tag is useful and performant, but it isn't packaged with the logic of the component thus making it difficult to distribute the template with the rest of the logic.
 
