--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/09.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/09.md
@@ -20,7 +20,7 @@
 
 ## Why Lit templates?
 
-First and foremost, the `<template>` tag is useful and performant, but it isn't packaged with the logic of the component thus making it difficult to distribute the template with the rest of the logic.
+The `<template>` tag is useful and performant, but it isn't packaged with the logic of the component, making it difficult to distribute a component in a single file.
 
 Additionally the way template elements are used inherently lend to imperative code, which in many cases, leads to less-readable code compared to declarative coding patterns.
 
