--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/09.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/09.md
@@ -22,7 +22,7 @@
 
 The `<template>` tag is useful and performant, but it isn't packaged with the logic of the component, making it difficult to distribute a component in a single file.
 
-Additionally the way template elements are used inherently lend to imperative code, which in many cases, leads to less-readable code compared to declarative coding patterns.
+Template elements also lend themselves to imperative code. In many cases this leads to less-readable code compared to declarative coding patterns.
 
 This is where `lit-html` comes in! `lit-html` is the rendering system of Lit that allows you to write HTML templates in JavaScript, then efficiently render and re-render those templates together with data to create and update DOM. It is similar to JSX and Virtual DOM libraries but it runs natively in the browser and much more efficiently than VDOM in many cases.
 
