--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/09.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/09.md
@@ -24,7 +24,7 @@ The `<template>` tag is useful and performant, but it isn't packaged with the lo
 
 Template elements also lend themselves to imperative code. In many cases this leads to less-readable code compared to declarative coding patterns.
 
-This is where `lit-html` comes in! `lit-html` is the rendering system of Lit that allows you to write HTML templates in JavaScript, then efficiently render and re-render those templates together with data to create and update DOM. It is similar to JSX and Virtual DOM libraries but it runs natively in the browser and much more efficiently than VDOM in many cases.
+This is where Lit templates comes in! Lit lets you write templates in JavaScript, then efficiently render and re-render those templates together with data to create and update DOM. It is similar to JSX and Virtual DOM libraries but it runs natively in the browser and much more efficiently than VDOM in many cases.
 
 <aside class="info">
 You can learn about more Lit's templating features that we will not cover (such as template repeating and property binding) on the <a href="https://lit.dev/docs/templates/overview/">Lit docs' templating section</a>.
