--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/03.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/03.md
@@ -63,7 +63,7 @@ Now the red border box should be gone—the styles in the main document can no l
 
 How did you do this? In the `connectedCallback` you called `this.attachShadow` which attaches a shadow root to an element. The `open` mode means that the shadow content is inspectable and makes the shadow root accessible via `this.shadowRoot` as well. Take a look at the Web Component in the Chrome inspector as well:
 
-<img src="/images/tutorials/wc-to-lit/dom-tree.png" alt="The dom tree in the chrome inspector. There is a <rating-element> with a#shadow-root (open) as it&rsquo;s child, and the DOM from before inside that shadowroot.">
+<img src="/images/tutorials/wc-to-lit/dom-tree.png" alt="The DOM tree in the chrome inspector. There is a <rating-element> with a #shadow-root (open) as it&rsquo;s child, and the DOM from before inside that shadow root.">
 
 You should now see a shadow root inside your component. You can expand the shadow root to show the contents of the shadow DOM. If you select the rating element in Chrome Dev Tools and call `$0.children`, you'll notice that it returns no children. The shadow DOM is its own DOM tree, separate from the component's direct children.
 
