--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/09.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/09.md
@@ -30,7 +30,7 @@ This is where Lit templates comes in! Lit lets you write templates in JavaScript
 You can learn about more Lit's templating features that we will not cover (such as template repeating and property binding) on the <a href="https://lit.dev/docs/templates/overview/">Lit docs' templating section</a>.
 </aside>
 
-## Using Lit HTML
+## Using Lit templates
 
 Next, migrate the native Web Component `<rating-element>` to use a Lit template which use [*Tagged Template Literals*](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Template_literals#tagged_templates) – functions that take template strings as arguments with a special syntax.
 
