--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/01.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/01.md
@@ -7,7 +7,7 @@ Web Components are a collection of 4 native web APIs. They are:
 * Shadow DOM
 * HTML Templates
 
-You've likely already used the ES modules specification, which allows you to create javascript modules with imports and exports that are loaded into the page with `<script type=”module”>`.
+You've likely already used the ES modules specification, which allows you to create JavaScript modules with imports and exports that are loaded into the page with `<script type=”module”>`.
 
 ## Defining a Custom Element
 
