--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/09.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/09.md
@@ -32,7 +32,7 @@ You can learn about more Lit's templating features that we will not cover (such 
 
 ## Using Lit templates
 
-Next, migrate the native Web Component `<rating-element>` to use a Lit template which use [*Tagged Template Literals*](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Template_literals#tagged_templates) – functions that take template strings as arguments with a special syntax.
+Next, migrate the native Web Component `<rating-element>` to use a Lit template. Lit uses [*Tagged Template Literals*](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Template_literals#tagged_templates) – functions that take template strings as arguments with a special syntax.
 
 Lit then uses `<template>` elements under the hood to provide fast rendering as well as providing some sanitization features for security.
 
