--- a/packages/lit-dev-content/site/tutorials/content/wc-to-lit/09.md
+++ b/packages/lit-dev-content/site/tutorials/content/wc-to-lit/09.md
@@ -36,7 +36,7 @@ Next, migrate the native Web Component `<rating-element>` to use a Lit template.
 
 Lit then uses `<template>` elements under the hood to provide fast rendering as well as providing some sanitization features for security.
 
-Start by migrating the `<template>` in index.html into a Lit template by adding a render() method to the webcomponent:
+Start by migrating the `<template>` in index.html into a Lit template by adding a `render()` method to the web component:
 
 ### index,js
 
